--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+img {
+  width: 100%;
+}
+
 #container {
   width: 400px;
   margin: auto;
@@ -29,17 +33,18 @@ body {
   background-color: #f90 !important;
 }
 .rightPlace {
-  background-color: green !important;
+  background-color: #57843C !important;
 }
 .inputForm {
   width: 100%;
-  padding: 10px;
+  padding: 10px 0px;
   float: left;
   box-sizing: border-box;
 
 }
 #inputField {
-  width: calc(100% - 10px);
+  display: block;
+  width: calc(100% - 5px);
   float: left;
   border: 1px solid  #fff;
   background-color: #333;
@@ -47,4 +52,29 @@ body {
   font-size: 1.5em;
   text-align: center;
   color: #fff;
+}
+
+#solutionBox {
+  text-align: center;
+  font-size: 1.5em;
+  display: none;
+}
+
+.actions {
+
+  width: 100%;
+  float: left;
+  padding-left: 5px;
+  box-sizing: border-box;
+}
+
+button {
+  width: calc(50% - 10px);
+  float: left;
+  margin: 20px 5px;
+  height: 30px;
+  list-style: 30px;
+  background-color: #111;
+  color: #fff;
+  border: 0px solid #333
 }
